fix spacing

--- a/css/mdt-global-style.css
+++ b/css/mdt-global-style.css
@@ -284,7 +284,7 @@ a svg {
 
 /* 其它 */
 
-#motobike_smart_cam, #handy-terminal, #kiosk, #outdoor-navigation, #outdoor-luminaires{
+#motobike_smart_cam, #handy-terminal, #kiosk, #outdoor-navigation, #outdoor-luminaires, #fleet-management, #premiumK165_K265{
   margin-top: -30px;
 }
 
